--- a/hw5/style.css
+++ b/hw5/style.css
@@ -107,6 +107,9 @@ a {
     flex-direction: column;
     align-items: center;
     background: #fff;
+    width: 370px;
+    height: 549px;
+    flex-shrink: 0;
 }
 
 .m_center {
@@ -121,7 +124,7 @@ a {
     font-weight: 400;
     line-height: 150%;
     margin-bottom: 39px;
-    width: 68%;
+    width: 81%;
 }
 
 .main__img {
