--- a/hw7/style.css
+++ b/hw7/style.css
@@ -24,6 +24,8 @@ a {
     align-items: center;
     background: #222;
     min-height: 75px;
+    position: relative;
+    z-index: 2;
 }
 
 .header_left {
@@ -53,6 +55,83 @@ a {
     margin-bottom: 65px;
     padding-left: calc(50% - 800px);
     padding-right: calc(50% - 800px);
+    position: relative;
+}
+
+.menu_checkbox {
+    display: none;
+}
+
+.mobile-menu {
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: 1;
+    display: block;
+    width: 232px;
+    background: #ffffff;
+    box-shadow: 6px 4px 35px rgba(0, 0, 0, 0.21);
+    padding: 32px;
+    transform: translateY(-100%);
+    transition: transform 0.3s ease-in-out;
+}
+
+.menu_checkbox:checked ~ .mobile-menu {
+    transform: translateY(0);
+}
+
+.mobile-menu__link-site {
+    align-items: center;
+    justify-content: space-around;
+    background-color: #e8e8e8;
+    padding: 8px;
+    border-radius: 10px;
+    margin-bottom: 24px;
+    display: flex;
+}
+
+.mobile-menu__heading {
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 17px;
+    color: #000000;
+}
+
+.mobile-menu__link {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+    color: #6f6e6e;
+}
+
+.mobile-menu__link:hover {
+    color: #f16d7f;
+}
+
+.mobile-menu__title {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+    color: #f16d7f;
+}
+
+.mobile-menu__list {
+    list-style-type: none;
+    padding-left: 21px;
+    display: flex;
+    flex-direction: column;
+    gap: 11px;
+    margin-top: 12px;
+}
+
+.mobile-menu__box {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    margin-top: 24px;
 }
 
 .main_left {
@@ -168,7 +247,7 @@ a {
 
 .showcase {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(auto-fit, 360px);
     gap: 30px;
     justify-content: center;
     margin-bottom: 48px;
@@ -176,10 +255,56 @@ a {
 
 .item {
     background: #f8f8f8;
+    transition: filter 0.3s;
+}
+.item_top {
+    position: relative;
 }
 
 .i_img {
     width: 100%;
+    transition: filter 0.3s;
+}
+
+.add_to_cart_btn {
+    display: flex;
+    padding: 11px 15px;
+    align-items: center;
+    justify-content: center;
+    gap: 11px;
+    position: absolute;
+    border: 1px solid white;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: none;
+    color: #fff;
+    font-family: Lato;
+    font-size: 14px;
+    font-weight: 400;
+    opacity: 0;
+    transition: opacity 0.3s;
+}
+
+.item:hover .add_to_cart {
+    filter: brightness(0.5);
+}
+
+.item:hover .add_to_cart_btn {
+    opacity: 1;
+}
+
+.add_to_cart_btn:hover {
+    box-shadow: 0 0 5px #fff;
+    transform: translate(-50%, -50%) scale(1.1);
+}
+
+.add_to_cart_btn:hover svg path {
+    fill: #f16d7f;
+}
+
+.add_to_cart_btn:active {
+    transform: translate(-50%, -50%) scale(1);
 }
 
 .item_text {
@@ -218,6 +343,7 @@ a {
     text-align: center;
     padding-top: 2.5%;
     padding: 2.38% 30.28%;
+    position: relative;
 }
 
 .items_btn {
@@ -235,6 +361,187 @@ a {
     font-weight: 400;
     border-color: #ff6a6a;
     background-color: #fff;
+    transition: background-color 0.6s;
+    transition: color 0.6s;
+}
+
+.broowse_all_btn:hover {
+    background-color: #f16d7f;
+    color: #fff;
+}
+
+.advantages {
+    display: flex;
+    justify-content: space-between;
+    background: #222224;
+    align-items: center;
+    flex-wrap: wrap;
+    min-height: 341px;
+    padding-top: 6.44%;
+    padding-bottom: 6.44%;
+}
+
+.advantages_item {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+}
+
+.advantages_img {
+    margin-bottom: 28px;
+}
+
+.advantages_title {
+    color: #fbfbfb;
+    font-family: Lato;
+    font-size: 20px;
+    font-weight: 400;
+    margin-bottom: 16px;
+}
+
+.advantages_dsc {
+    color: #fbfbfb;
+    text-align: center;
+    font-family: Lato;
+    font-size: 13.972px;
+    font-weight: 300;
+    width: 360px;
+    padding: 0 7%;
+}
+
+.subscribe {
+    display: flex;
+    justify-content: space-between;
+    background-size: cover;
+    background-position: left;
+    background-image: url(img/sub_back_img.png);
+}
+
+.subscr_left {
+    margin-top: 97px;
+    text-align: center;
+}
+
+.subscr_left_img {
+    margin-bottom: 30px;
+}
+
+.subscr_left_dsc {
+    max-width: 360px;
+    color: #222224;
+    text-align: center;
+    font-family: Lato;
+    font-size: 20px;
+    font-weight: 400;
+}
+
+.subscr_right {
+    margin-top: 150px;
+    margin-bottom: 156px;
+    text-align: center;
+}
+
+.subscr_right_text {
+    width: 557px;
+    margin-bottom: 32px;
+}
+
+.subscr_right_title {
+    color: #222224;
+    font-family: Lato;
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 167.2%;
+}
+
+.subscr_right_subtitle {
+    color: #222224;
+    font-family: Lato;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 167.2%;
+}
+
+.subscribe-form {
+    display: flex;
+    justify-content: center;
+}
+
+.email-input {
+    border-top-left-radius: 25px;
+    border-bottom-left-radius: 25px;
+    padding-left: 22px;
+    border: none;
+    height: 49px;
+    background-color: #e1e1e1;
+    width: 256px;
+    color: #222224;
+    font-family: Lato;
+    font-size: 14px;
+    font-weight: 400;
+}
+
+.subscribe-button {
+    background-color: #f16d7f;
+    color: #fff;
+    border: none;
+    height: 49px;
+    width: 100px;
+    border-top-right-radius: 25px;
+    border-bottom-right-radius: 25px;
+    color: #fff;
+    text-align: center;
+    font-family: Lato;
+    font-size: 14px;
+    font-weight: 400;
+    transition: background-color 0.6s;
+}
+
+.subscribe-button:hover {
+    background-color: #e05c6e;
+}
+
+.footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background: #222224;
+    min-height: 79px;
+}
+
+.footer_left {
+    color: #fbfbfb;
+    font-family: Lato;
+    font-size: 16px;
+    font-weight: 400;
+}
+
+.footer_right {
+    display: flex;
+    gap: 8px;
+}
+
+.social_web_link {
+    width: 32px;
+    height: 32px;
+    background-color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: background-color 0.6s;
+}
+
+.footer_social_web_img {
+    transition: background-color 0.6s;
+}
+
+.social_web_link:hover {
+    background-color: #f16d7f;
+}
+
+.social_web_link:hover .footer_social_web_img path {
+    fill: white;
 }
 
 @media screen and (max-width: 769px) {
@@ -263,6 +570,17 @@ a {
     .showcase {
         grid-template-columns: repeat(2, 1fr);
         gap: 16px;
+    }
+
+    .advantages {
+        flex-direction: column;
+        justify-content: space-around;
+        gap: 48px;
+    }
+
+    .subscribe {
+        flex-direction: column;
+        align-items: center;
     }
 }
 
@@ -314,5 +632,17 @@ a {
     .showcase {
         display: flex;
         flex-direction: column;
+    }
+    .footer {
+        flex-direction: column-reverse;
+    }
+
+    .social_web_link {
+        margin-top: 43px;
+        margin-bottom: 40px;
+    }
+
+    .rights {
+        margin-bottom: 9px;
     }
 }
