--- a/hw5/style.css
+++ b/hw5/style.css
@@ -4,6 +4,12 @@
     box-sizing: border-box;
 }
 
+body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
 a {
     text-decoration: none;
 }
@@ -68,6 +74,10 @@ a {
 
 .h_center {
     box-shadow: 15px 25px 56px 6px rgba(0, 0, 0, 0.06);
+}
+
+.main_container {
+    flex: 1;
 }
 
 .main {
