--- a/hw8/_general.scss
+++ b/hw8/_general.scss
@@ -13,6 +13,18 @@ a {
     text-decoration: none;
 }
 
+summary {
+    display: block;
+}
+
+summary::-webkit-details-marker {
+    display: none;
+}
+
+.page_content {
+    overflow: hidden;
+}
+
 .center {
     padding-left: calc(50% - 570px);
     padding-right: calc(50% - 570px);
