--- a/hw8/_header.scss
+++ b/hw8/_header.scss
@@ -6,18 +6,27 @@
     min-height: 75px;
     position: relative;
     z-index: 2;
-&_left {
-    display: flex;
-    align-items: flex-end;
-    gap: 41px;
-}&_logo_link {
-    height: 100%;
-}&_right {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 159px;
-}&_link {
-    padding: 23px 0;
-}
+    &_left {
+        display: flex;
+        align-items: flex-end;
+        gap: 41px;
+    }
+    &_search:hover path {
+        fill: $pinkTextColour;
+    }
+    &_logo_link {
+        height: 100%;
+    }
+    &_right {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 159px;
+    }
+    &_link {
+        padding: 23px 0;
+        &:hover path {
+            fill: $pinkTextColour;
+        }
+    }
 }
