--- a/hw8/_header_lower.scss
+++ b/hw8/_header_lower.scss
@@ -25,5 +25,8 @@
             color: $pinkTextColour;
             font-weight: 700;
         }
+        &:hover {
+            color: $pinkTextColour;
+        }
     }
 }
