--- a/hw8/style.css
+++ b/hw8/style.css
@@ -13,6 +13,18 @@ a {
   text-decoration: none;
 }
 
+summary {
+  display: block;
+}
+
+summary::-webkit-details-marker {
+  display: none;
+}
+
+.page_content {
+  overflow: hidden;
+}
+
 .center {
   padding-left: calc(50% - 570px);
   padding-right: calc(50% - 570px);
@@ -32,6 +44,9 @@ a {
   align-items: flex-end;
   gap: 41px;
 }
+.header_search:hover path {
+  fill: #f16d7f;
+}
 .header_logo_link {
   height: 100%;
 }
@@ -43,6 +58,71 @@ a {
 }
 .header_link {
   padding: 23px 0;
+}
+.header_link:hover path {
+  fill: #f16d7f;
+}
+
+.burger_label:hover path {
+  fill: #f16d7f;
+}
+.burger_nav {
+  background: #fff;
+  box-shadow: 6px 4px 35px rgba(0, 0, 0, 0.21);
+  max-width: 232px;
+  width: 100%;
+  padding: 32px;
+  position: absolute;
+  top: 75px;
+  right: 0;
+  transition: right 0.3s;
+}
+.burger_nav_heading {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 17px;
+  color: #000000;
+}
+.burger_nav_box {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin-top: 24px;
+}
+.burger_nav_title {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 17px;
+  color: #f16d7f;
+}
+.burger_nav_list {
+  list-style-type: none;
+  padding-left: 21px;
+  display: flex;
+  flex-direction: column;
+  gap: 11px;
+  margin-top: 12px;
+}
+.burger_nav_link {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 17px;
+  color: #6f6e6e;
+}
+.burger_nav_link:hover {
+  color: #f16d7f;
+}
+
+#burger {
+  position: absolute;
+  left: -999999999px;
+  visibility: hidden;
+}
+#burger:checked ~ .burger_nav {
+  right: -232px;
 }
 
 .header_lower {
@@ -73,6 +153,117 @@ a {
 .breadcrumb-item_link_active {
   color: #f16d7f;
   font-weight: 700;
+}
+.breadcrumb-item_link:hover {
+  color: #f16d7f;
+}
+
+.filter_sort {
+  height: 133px;
+  position: relative;
+  display: flex;
+  padding-top: 39px;
+  gap: 30px;
+}
+
+.filter {
+  position: relative;
+  padding-top: 12px;
+  max-width: 360px;
+  width: 100%;
+  z-index: 10;
+  background: #fff;
+}
+.filter[open] {
+  box-shadow: 6px 4px 35px rgba(0, 0, 0, 0.21);
+}
+.filter[open] .filter_summary_text,
+.filter[open] path {
+  color: #f16d7f;
+  fill: #f16d7f;
+}
+.filter_summary {
+  display: flex;
+  align-items: center;
+  gap: 11px;
+  padding-left: 16px;
+}
+.filter_summary_text {
+  color: #000;
+  font-family: Lato;
+  font-size: 14px;
+  font-weight: 600;
+}
+.filter_items {
+  padding: 0 16px 16px;
+  background: #fff;
+}
+.filter_item {
+  margin-top: 16px;
+}
+.filter_item_box[open] .filter_item_box_name {
+  color: #f16d7f;
+}
+.filter_item_box_name {
+  color: #6f6e6e;
+  font-family: Lato;
+  font-size: 14px;
+  font-weight: 400;
+  padding: 8px 11px 11px;
+  border-bottom: 1px solid #ebebeb;
+  border-left: 5px solid #f16d7f;
+}
+.filter_item_box_links {
+  display: flex;
+  flex-direction: column;
+  gap: 11px;
+  padding: 24px 16px;
+}
+.filter_item_box_link {
+  color: #6f6e6e;
+  font-size: 14px;
+  font-weight: 400;
+}
+.filter_item_box_link:hover {
+  color: #f16d7f;
+}
+
+.sort {
+  padding-top: 12px;
+  display: flex;
+  align-items: start;
+  gap: 28px;
+}
+.sort_details {
+  position: relative;
+}
+.sort_criterion {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+.sort_criterion_name {
+  color: #6f6e6e;
+  font-family: Lato;
+  font-size: 14px;
+  font-weight: 400;
+}
+.sort_box {
+  position: absolute;
+  z-index: 1;
+  background: #fff;
+  box-shadow: 6px 4px 35px 0px rgba(0, 0, 0, 0.21);
+  padding: 7px 30px 11px 9px;
+}
+.sort_box_check {
+  display: flex;
+  gap: 9px;
+}
+.sort_box_check_label {
+  color: #6f6e6e;
+  font-family: Roboto;
+  font-size: 14px;
+  font-weight: 400;
 }
 
 .main {
@@ -220,10 +411,12 @@ a {
 }
 .collection_add_to_cart_btn {
   display: flex;
-  padding: 12px 57px 12px 24px;
   align-items: center;
   justify-content: center;
   gap: 23px;
+  max-width: 212px;
+  width: 100%;
+  height: 48px;
   border: 1px solid #f26376;
   color: #f26376;
   background-color: #fff;
@@ -238,74 +431,6 @@ a {
 }
 .collection_add_to_cart_btn:hover .collection_add_to_cart_btn_img path {
   fill: #fff;
-}
-
-.menu_checkbox {
-  display: none;
-}
-.menu_checkbox:checked ~ .mobile-menu {
-  transform: translateY(0);
-}
-
-.mobile-menu {
-  position: absolute;
-  top: 0;
-  right: 0;
-  z-index: 1;
-  display: block;
-  width: 232px;
-  background: #ffffff;
-  box-shadow: 6px 4px 35px rgba(0, 0, 0, 0.21);
-  padding: 32px;
-  transform: translateY(-100%);
-  transition: transform 0.3s ease-in-out;
-}
-.mobile-menu__link-site {
-  align-items: center;
-  justify-content: space-around;
-  background-color: #e8e8e8;
-  padding: 8px;
-  border-radius: 10px;
-  margin-bottom: 24px;
-  display: flex;
-}
-.mobile-menu__heading {
-  font-style: normal;
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 17px;
-  color: #000000;
-}
-.mobile-menu__link {
-  font-style: normal;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 17px;
-  color: #6f6e6e;
-}
-.mobile-menu__title {
-  font-style: normal;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 17px;
-  color: #f16d7f;
-}
-.mobile-menu__list {
-  list-style-type: none;
-  padding-left: 21px;
-  display: flex;
-  flex-direction: column;
-  gap: 11px;
-  margin-top: 12px;
-}
-.mobile-menu__box {
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-  margin-top: 24px;
-}
-.mobile-menu__link:hover {
-  color: #f16d7f;
 }
 
 .categories {
