--- a/hw8/_items.scss
+++ b/hw8/_items.scss
@@ -127,4 +127,27 @@
             color: #fff;
         }
     }
+    &_pagination {
+        padding: 15px 16px;
+        display: flex;
+        justify-content: space-between;
+        border: 1px solid #ebebeb;
+        max-width: 282px;
+        margin: 0 auto;
+        &_arrow:hover path {
+            fill: $pinkTextColour;
+        }
+        &_link {
+            color: #c4c4c4;
+            font-family: Lato;
+            font-size: 16px;
+            font-weight: 300;
+            &_active {
+                color: $pinkTextColour;
+            }
+            &:hover {
+                color: $pinkTextColour;
+            }
+        }
+    }
 }
