--- a/hw8/style.scss
+++ b/hw8/style.scss
@@ -12,6 +12,7 @@ $widthBurgerMenu: 232px;
 @import "filter_sort";
 @import "main";
 @import "carousel";
+@import "cart";
 @import "collection";
 @import "categories";
 @import "items";
