--- a/hw8/_general.scss
+++ b/hw8/_general.scss
@@ -5,6 +5,20 @@
     font-family: "Lato", sans-serif;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+ul,
+ol,
+li {
+    margin: 0;
+    padding: 0;
+}
+
 img {
     max-width: 100%;
 }
