--- a/hw8/style.css
+++ b/hw8/style.css
@@ -5,6 +5,20 @@
   font-family: "Lato", sans-serif;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+ul,
+ol,
+li {
+  margin: 0;
+  padding: 0;
+}
+
 img {
   max-width: 100%;
 }
@@ -341,6 +355,206 @@ summary::-webkit-details-marker {
 
 .visually-hidden {
   margin: 0px !important;
+}
+
+.cart {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 96px;
+  margin-bottom: 128px;
+}
+.cart_left {
+  width: 57%;
+}
+.cart_left_items {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+  margin-bottom: 72px;
+}
+.cart_left_items_item {
+  display: flex;
+  justify-content: space-between;
+  box-shadow: 17px 19px 24px rgba(0, 0, 0, 0.13);
+  max-width: 652px;
+  width: 100%;
+  gap: 4%;
+}
+.cart_left_items_item_desc {
+  width: 60%;
+  padding-top: 22px;
+  color: #222;
+  font-family: Lato;
+  font-weight: 400;
+  font-size: 22px;
+}
+.cart_left_items_item_desc_name {
+  max-width: 211px;
+  font-size: 24px;
+  margin-bottom: 42px;
+}
+.cart_left_items_item_desc_price {
+  color: #f16d7f;
+}
+.cart_left_items_item_desc_features {
+  display: flex;
+  flex-direction: column;
+  gap: 6px;
+}
+.cart_left_items_item_desc_quantity {
+  display: flex;
+  align-items: center;
+  gap: 24px;
+}
+.cart_left_items_item_desc_input {
+  width: 44px;
+  height: 25px;
+  text-align: center;
+  color: #656565;
+  font-family: Lato;
+  font-size: 18px;
+}
+.cart_left_items_item_desc_input[type=number]::-webkit-inner-spin-button, .cart_left_items_item_desc_input[type=number]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+.cart_left_items_item_desc_input:focus {
+  box-shadow: 0 0 10px 10px rgba(241, 109, 127, 0.7);
+}
+.cart_left_btns {
+  display: flex;
+  justify-content: space-between;
+}
+.cart_left_btns_button {
+  padding: 16px 40px;
+  color: #000;
+  font-family: Lato;
+  font-size: 14px;
+  font-weight: 300;
+  border: 1px solid #a4a4a4;
+  background: none;
+  transition: transform 0.2s ease, background-color 0.3s ease, color 0.3s ease;
+}
+.cart_left_btns_button:hover {
+  transform: scale(1.05);
+  background-color: #f16d7f;
+  color: #fff;
+}
+.cart_left_btns_button:active {
+  transform: scale(0.95);
+}
+.cart_right {
+  padding-top: 17px;
+  width: 32%;
+}
+.cart_right_title {
+  color: #222;
+  font-family: Lato;
+  font-size: 16px;
+  font-weight: 300;
+  margin-bottom: 20px;
+}
+.cart_right_address {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin-bottom: 23px;
+}
+.cart_right_address_input {
+  color: #222;
+  font-family: Lato;
+  font-size: 13px;
+  font-weight: 300;
+  height: 45px;
+  padding-left: 17px;
+  border: 1px solid #a4a4a4;
+}
+.cart_right_address_input::-moz-placeholder {
+  color: #b1b1b1;
+}
+.cart_right_address_input::placeholder {
+  color: #b1b1b1;
+}
+.cart_right_address_input[type=number]::-webkit-inner-spin-button, .cart_right_address_input[type=number]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+.cart_right_address_input:focus {
+  box-shadow: 0 0 10px 10px rgba(241, 109, 127, 0.7);
+}
+.cart_right_btn {
+  background: none;
+  padding: 12px 16px;
+  border: 1px solid #a4a4a4;
+  color: #4a4a4a;
+  font-family: Lato;
+  font-size: 11px;
+  font-weight: 300;
+  margin-bottom: 57px;
+  transition: transform 0.2s ease, background-color 0.3s ease, color 0.3s ease;
+}
+.cart_right_btn:hover {
+  transform: scale(1.05);
+  background-color: #f16d7f;
+  color: #fff;
+}
+.cart_right_btn:active {
+  transform: scale(0.95);
+}
+.cart_right_checkout {
+  background: #f5f3f3;
+  padding: 40px 44px;
+  display: flex;
+  flex-direction: column;
+}
+.cart_right_checkout_total {
+  display: flex;
+  flex-direction: column;
+  align-items: end;
+  color: #4a4a4a;
+  font-family: Lato;
+  font-size: 11px;
+  font-weight: 400;
+  width: 100%;
+  padding-bottom: 21px;
+  border-bottom: 1px solid #e2e2e2;
+  margin-bottom: 17px;
+}
+.cart_right_checkout_total_sub {
+  display: flex;
+  justify-content: space-between;
+  max-width: 108px;
+  width: 100%;
+}
+.cart_right_checkout_total_grand {
+  display: flex;
+  justify-content: space-between;
+  max-width: 170px;
+  width: 100%;
+  color: #222;
+  font-size: 16px;
+  font-weight: 300;
+}
+.cart_right_checkout_total_grand_price {
+  color: #f16d7f;
+}
+.cart_right_checkout_btn {
+  background: #f16d7f;
+  color: #fff;
+  font-family: Lato;
+  font-size: 16px;
+  font-weight: 300;
+  padding-top: 16px;
+  padding-bottom: 16px;
+  border: none;
+  transition: transform 0.2s ease, background-color 0.3s ease;
+}
+.cart_right_checkout_btn:hover {
+  transform: scale(1.05);
+  background-color: #e05c6e;
+}
+.cart_right_checkout_btn:active {
+  transform: scale(0.95);
 }
 
 .collection {
