--- a/hw8/_cart.scss
+++ b/hw8/_cart.scss
@@ -55,6 +55,7 @@
                             margin: 0;
                         }
                         &:focus {
+                            outline: none;
                             box-shadow: 0 0 10px 10px rgba(241, 109, 127, 0.7);
                         }
                     }
@@ -103,24 +104,7 @@
             gap: 20px;
             margin-bottom: 23px;
             &_input {
-                color: #222;
-                font-family: Lato;
-                font-size: 13px;
-                font-weight: 300;
-                height: 45px;
-                padding-left: 17px;
-                border: 1px solid #a4a4a4;
-                &::placeholder {
-                    color: #b1b1b1;
-                }
-                &[type="number"]::-webkit-inner-spin-button,
-                &[type="number"]::-webkit-outer-spin-button {
-                    -webkit-appearance: none;
-                    margin: 0;
-                }
-                &:focus {
-                    box-shadow: 0 0 10px 10px rgba(241, 109, 127, 0.7);
-                }
+                @include inputFormStyle();
             }
         }
         &_btn {
@@ -153,7 +137,7 @@
             &_total {
                 display: flex;
                 flex-direction: column;
-                align-items: end;
+                align-items: flex-end;
                 color: #4a4a4a;
                 font-family: Lato;
                 font-size: 11px;
