--- a/hw8/_header_lower.scss
+++ b/hw8/_header_lower.scss
@@ -3,8 +3,7 @@
     justify-content: space-between;
     align-items: center;
     background: #f8f3f4;
-    padding-top: 60px;
-    padding-bottom: 60px;
+    height: 148px;
     &_title {
         color: $pinkTextColour;
         font-family: Lato;
