--- a/hw8/_header.scss
+++ b/hw8/_header.scss
@@ -3,7 +3,7 @@
     justify-content: space-between;
     align-items: center;
     background: #222;
-    min-height: 75px;
+    height: 75px;
     position: relative;
     z-index: 2;
     &_left {
@@ -15,6 +15,8 @@
         fill: $pinkTextColour;
     }
     &_logo_link {
+        width: 44px;
+        height: 38px;
         height: 100%;
     }
     &_right {
