--- a/hw8/style.css
+++ b/hw8/style.css
@@ -49,7 +49,7 @@ summary::-webkit-details-marker {
   justify-content: space-between;
   align-items: center;
   background: #222;
-  min-height: 75px;
+  height: 75px;
   position: relative;
   z-index: 2;
 }
@@ -62,6 +62,8 @@ summary::-webkit-details-marker {
   fill: #f16d7f;
 }
 .header_logo_link {
+  width: 44px;
+  height: 38px;
   height: 100%;
 }
 .header_right {
@@ -144,8 +146,7 @@ summary::-webkit-details-marker {
   justify-content: space-between;
   align-items: center;
   background: #f8f3f4;
-  padding-top: 60px;
-  padding-bottom: 60px;
+  height: 148px;
 }
 .header_lower_title {
   color: #f16d7f;
@@ -180,21 +181,29 @@ summary::-webkit-details-marker {
   gap: 30px;
 }
 
-.filter {
+.filter-box {
   position: relative;
-  padding-top: 12px;
   max-width: 360px;
   width: 100%;
+}
+
+.filter {
+  position: absolute;
+  padding-top: 12px;
   z-index: 10;
   background: #fff;
 }
 .filter[open] {
   box-shadow: 6px 4px 35px rgba(0, 0, 0, 0.21);
+  width: 360px;
 }
 .filter[open] .filter_summary_text,
 .filter[open] path {
   color: #f16d7f;
   fill: #f16d7f;
+}
+.filter[open] .filter-box {
+  width: 360px;
 }
 .filter_summary {
   display: flex;
@@ -245,6 +254,7 @@ summary::-webkit-details-marker {
 .sort {
   padding-top: 12px;
   display: flex;
+  flex-wrap: wrap;
   gap: 28px;
 }
 .sort_details {
@@ -403,10 +413,12 @@ summary::-webkit-details-marker {
 .cart_left_items_item_desc_quantity {
   display: flex;
   align-items: center;
-  gap: 24px;
+  max-width: 166px;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
 .cart_left_items_item_desc_input {
-  width: 44px;
+  max-width: 44px;
   height: 25px;
   text-align: center;
   color: #656565;
@@ -443,6 +455,9 @@ summary::-webkit-details-marker {
 .cart_left_btns_button:active {
   transform: scale(0.95);
 }
+.cart_address {
+  margin-bottom: 57px;
+}
 .cart_right {
   padding-top: 17px;
   width: 32%;
@@ -454,13 +469,13 @@ summary::-webkit-details-marker {
   font-weight: 300;
   margin-bottom: 20px;
 }
-.cart_right_address {
+.cart_right_address-data {
   display: flex;
   flex-direction: column;
   gap: 20px;
   margin-bottom: 23px;
 }
-.cart_right_address_input {
+.cart_right_address-data_input {
   color: #222;
   font-family: Lato;
   font-size: 13px;
@@ -469,17 +484,17 @@ summary::-webkit-details-marker {
   padding-left: 17px;
   border: 1px solid #a4a4a4;
 }
-.cart_right_address_input::-moz-placeholder {
+.cart_right_address-data_input::-moz-placeholder {
   color: #b1b1b1;
 }
-.cart_right_address_input::placeholder {
+.cart_right_address-data_input::placeholder {
   color: #b1b1b1;
 }
-.cart_right_address_input[type=number]::-webkit-inner-spin-button, .cart_right_address_input[type=number]::-webkit-outer-spin-button {
+.cart_right_address-data_input[type=number]::-webkit-inner-spin-button, .cart_right_address-data_input[type=number]::-webkit-outer-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
-.cart_right_address_input:focus {
+.cart_right_address-data_input:focus {
   outline: none;
   box-shadow: 0 0 10px 10px rgba(241, 109, 127, 0.7);
 }
@@ -491,7 +506,6 @@ summary::-webkit-details-marker {
   font-family: Lato;
   font-size: 11px;
   font-weight: 300;
-  margin-bottom: 57px;
   transition: transform 0.2s ease, background-color 0.3s ease, color 0.3s ease;
 }
 .cart_right_btn:hover {
@@ -566,7 +580,7 @@ summary::-webkit-details-marker {
   gap: 11%;
 }
 .registration__left {
-  width: 32%;
+  max-width: 360px;
 }
 .registration__input-form {
   display: flex;
@@ -674,7 +688,9 @@ summary::-webkit-details-marker {
   display: flex;
   gap: 23px;
   align-items: center;
-  height: 24px;
+}
+.registration__perk_svg {
+  width: 20px;
 }
 
 .collection {
@@ -1139,9 +1155,73 @@ summary::-webkit-details-marker {
   .main_title_part1 {
     font-size: 44px;
   }
+  .registration {
+    gap: 3%;
+  }
+  .registration__right {
+    font-size: 16px;
+  }
+  .cart {
+    flex-direction: column;
+    gap: 64px;
+  }
+  .cart_left {
+    width: 100%;
+  }
+  .cart_left_items {
+    align-items: center;
+  }
+  .cart_left_btns {
+    justify-content: center;
+    gap: 6%;
+  }
+  .cart_right {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    gap: 15px;
+    padding-top: 0;
+  }
+  .cart_right_checkout {
+    width: 47%;
+    margin-top: 39px;
+    max-height: 214px;
+  }
+  .cart_address {
+    width: 47%;
+  }
+  .carousel {
+    padding: 30px 0;
+  }
+  .carousel-item.active {
+    padding: 0;
+  }
+  .collection {
+    margin-top: 0;
+    margin-bottom: 128px;
+  }
+  .filter_sort {
+    justify-content: space-between;
+    gap: 15px;
+  }
+  .filter-box {
+    width: 70px;
+  }
   .items_showcase {
     grid-template-columns: repeat(2, 1fr);
     gap: 16px;
+  }
+  .items_showcase-product {
+    margin-bottom: 128px;
+  }
+  .items_showcase-product_item_6 {
+    display: none;
+  }
+  .items_showcase-product_item_4 {
+    order: 1;
+  }
+  .items_showcase-catalog_item_3 {
+    display: none;
   }
   .advantages {
     flex-direction: column;
@@ -1172,6 +1252,11 @@ summary::-webkit-details-marker {
   .header_link_bag {
     display: none;
   }
+  .header_lower {
+    flex-direction: column;
+    justify-content: center;
+    gap: 32px;
+  }
   .main_left {
     display: none;
   }
@@ -1186,15 +1271,109 @@ summary::-webkit-details-marker {
   .main_title_part1 {
     font-size: 38px;
   }
+  .registration {
+    gap: 40px;
+    flex-wrap: wrap;
+  }
+  .registration__right {
+    width: 100%;
+  }
+  .cart {
+    gap: 48px;
+  }
+  .cart_left_items_item_img {
+    width: 144px;
+  }
+  .cart_left_items_item_desc {
+    padding-top: 12px;
+    font-size: 14px;
+  }
+  .cart_left_items_item_desc_name {
+    margin-bottom: 24px;
+    font-size: 16px;
+    max-width: 140px;
+  }
+  .cart_left_items_item_desc_features {
+    gap: 4px;
+    margin-bottom: 38px;
+  }
+  .cart_left_items_item_desc_quantity {
+    max-width: 112px;
+  }
+  .cart_left_items_item_desc_input {
+    max-width: 24px;
+    height: 16px;
+  }
+  .cart_left_btns_button {
+    padding: 9px 18px;
+    font-size: 12px;
+    font-weight: 400;
+    color: #575757;
+  }
+  .cart_address {
+    margin-bottom: 48px;
+    width: 100%;
+  }
+  .cart_right {
+    flex-direction: column;
+  }
+  .cart_right_checkout {
+    width: 100%;
+  }
+  .cart_right_btn {
+    padding: 12px 20px;
+    color: #575757;
+    font-weight: 400;
+  }
   .categories {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     gap: 32px;
   }
+  .collection {
+    margin-bottom: 64px;
+  }
+  .collection_choose_menu_part_title {
+    font-size: 10px;
+  }
+  .filter_summary {
+    padding-left: 0;
+  }
+  .filter_summary_text {
+    display: none;
+  }
+  .filter_summary svg {
+    width: 38px;
+    height: 25px;
+  }
+  .filter-box {
+    width: 38px;
+  }
+  .sort {
+    gap: 24px;
+  }
+  .sort_criterion {
+    gap: 9px;
+  }
+  .sort_criterion_name {
+    font-size: 12px;
+  }
   .items_showcase {
     display: flex;
     flex-direction: column;
+  }
+  .items_showcase-product {
+    margin-bottom: 64px;
+  }
+  .items_showcase-product_item_3 {
+    display: none;
+  }
+  .items_showcase-product_item_6 {
+    display: block;
+  }
+  .items_showcase-product_item_4 {
+    order: 0;
   }
   .subscribe_right_subtitle {
     font-size: 14px;
